[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PlayGame.gd" type="Script" id=1]

[node name="PlayGame" type="Spatial"]
script = ExtResource( 1 )

[node name="Intro_UI" type="Control" parent="."]
margin_right = 197.0
margin_bottom = 53.0
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Intro_UI"]
margin_left = 190.0
margin_top = 324.0
margin_right = 474.0
margin_bottom = 440.0

[node name="Score_Label" type="Label" parent="Intro_UI"]
margin_left = 196.0
margin_top = 97.0
margin_right = 486.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( -496, -19 )
text = "Your Score:
"

[node name="Highscore_Label" type="Label" parent="Intro_UI"]
margin_left = 198.0
margin_top = 133.0
margin_right = 425.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( -496, -19 )
text = "High Score:
"
[connection signal="pressed" from="Intro_UI/Button" to="." method="_on_Button_pressed"]
